# prod_tools

email_auto/: pyproject.toml
email_auto/src/email_auto/: crew.py  main.py
email_auto/src/email_auto/config/: agents.yaml  tasks.yaml
