[project]
name = "email_auto"
version = "0.1.0"
description = "email_auto using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.0"
]

[project.scripts]
email_auto = "email_auto.main:run"
run_crew = "email_auto.main:run"
train = "email_auto.main:train"
replay = "email_auto.main:replay"
test = "email_auto.main:test"
run_with_trigger = "email_auto.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
